# helix

./: Cargo.toml  arraystring-12-report.json  arraystring-20-report.json  arraystring-28-report.json  arraystring-4-report.json  benchmark-summary.md  compact-str-report.json  make_json.sh  script.sh  smartstring-report.json  string-report.json
helix-tui/: Cargo.toml
helix-tui/examples/: BENCHMARK_RESULTS.md  buffer_benchmark.rs
helix-tui/src/: buffer.rs
