[package]
name = "helix-tui"
description = """A library to build rich terminal user interfaces or dashboards"""
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["termina", "crossterm", "string-symbol"]
string-symbol = []
compact-str-symbol = ["dep:compact_str"]
smartstring-symbol = ["dep:smartstring"]
arraystring-12-symbol = ["dep:arrayvec"]
arraystring-28-symbol = ["dep:arrayvec"]

[dependencies]
helix-view = { path = "../helix-view", features = ["term"] }
helix-core = { path = "../helix-core" }

arrayvec = { workspace = true, optional = true }
bitflags.workspace = true
cassowary = "0.3"
compact_str = { workspace = true, optional = true }
smartstring = { workspace = true, optional = true }
unicode-segmentation.workspace = true
termina = { workspace = true, optional = true }
termini = "1.0"
once_cell = "1.21"
log = "~0.4"

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
criterion.workspace = true

[lib]
bench = false

[[bench]]
name = "tui"
harness = false
